--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,21 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require material
  *= require_tree .
  *= require_self
  */
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.menu {
+    height: 100%;
+    flex: 1;
+}
+
+.container {
+    padding: 1em;
+}
