--- a/app/views/receivers/_form.html.erb
+++ b/app/views/receivers/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :sender_id %>
-    <%= form.text_field :sender_id, id: :receiver_sender_id %>
+    <%= form.select :sender_id, options_for_select(Sender.all.map { |s| [s.name, s.id] }) %>
   </div>
 
   <div class="actions">
