--- a/app/views/senders/_form.html.erb
+++ b/app/views/senders/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= form.label :client_id %>
-    <%= form.text_field :client_id, id: :sender_client_id %>
+    <%= form.select :client_id, options_for_select(Client.all.map { |c| [c.name, c.id] }) %>
   </div>
 
   <div class="actions">
