--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Sender:</strong>
-  <%= @template.sender %>
+  <%= @template.sender.email %>
 </p>
 
 <%= link_to 'Edit', edit_template_path(@template) %> |
