--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -19,11 +19,10 @@
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">MewKeting</span>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="">Relatórios</a>
-      <a class="mdl-navigation__link" href="">Usuários</a>
-      <a class="mdl-navigation__link" href="">Clientes</a>
+      <a class="mdl-navigation__link" href="/receivers">Destinatários</a>
+      <a class="mdl-navigation__link" href="/groups">Grupos</a> 
       <a class="mdl-navigation__link" href="/templates">Templates</a>
-      <a class="mdl-navigation__link" href="/emails">Email</a>
+      <a class="mdl-navigation__link" href="/emails">email</a>
     </nav>
   </div>
   <main class="mdl-layout__content">
