Assigning sender of group to current user

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Sender:</strong>
-  <%= @group.sender %>
+  <%= @group.sender.email %>
 </p>
 
 <%= link_to 'Edit', edit_group_path(@group) %> |
