--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= group.name %></td>
         <td><%= group.private %></td>
-        <td><%= group.sender %></td>
+        <td><%= group.sender.email %></td>
         <td><%= link_to 'Show', group %></td>
         <td><%= link_to 'Edit', edit_group_path(group) %></td>
         <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
