--- a/app/views/receivers/show.html.erb
+++ b/app/views/receivers/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Sender:</strong>
-  <%= @receiver.sender %>
+  <%= @receiver.sender.email %>
 </p>
 
 <%= link_to 'Edit', edit_receiver_path(@receiver) %> |
