--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
   <h1>MewKetting</h1>
-  <img src='/assets/images/mailserver.jpg' />
+  <%= image_tag "mailserver.jpg" %>
 </div>
