Started messing with senders form

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,20 @@
 <div class="container">
-  <h1>MewKetting</h1>
-  <%= image_tag "mailserver.jpg" %>
+  <h1>MewKeting</h1>
+  <table>
+    <tr>
+      <td style="vertical-align: baseline;">
+        <p>
+          Provemos serviços relativos a estratégias de marketing virtual e comunicação direta com os usuários finais.
+          Entre as funcionalidades, destacam-se o envio de emails aos usuários, emails padrões e criar listas de destinatários.
+          O sistema de mensagem pode ser utilizado neste domínio ou com chamadas aos nossos serviços.
+      	  Você pode usar da comunicação para diferentes fins: atendimento ao cliente, notificações de estado de compras e oferecimento de produtos.
+        </p>
+      </td>
+      <td>
+        <%= image_tag "mailserver.jpg" , height: "800" %>
+      </td>
+    </tr>
+  </table>
+
+
 </div>
