--- a/app/views/senders/edit.html.erb
+++ b/app/views/senders/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Sender</h1>
 
-<%= render 'form', sender: @sender %>
+<%= render 'edit_form', sender: @sender %>
 
 <%= link_to 'Show', @sender %> |
 <%= link_to 'Back', senders_path %>
