--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>MewKeting</h1>
-  <table>
+  <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <tr>
       <td style="vertical-align: baseline;">
         <p>
