--- a/app/views/receivers/index.html.erb
+++ b/app/views/receivers/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Receivers</h1>
 
-<table>
+<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
   <thead>
     <tr>
       <th>Name</th>
