--- a/app/views/senders/index.html.erb
+++ b/app/views/senders/index.html.erb
@@ -2,24 +2,24 @@
 
 <h1>Senders</h1>
 
-<table>
+<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
   <thead>
     <tr>
-      <th>Email</th>
-      <th>Password digest</th>
-      <th>Admin</th>
-      <th>Client</th>
-      <th colspan="3"></th>
+      <th class="mdl-data-table__cell--non-numeric">Email</th>
+      <th class="mdl-data-table__cell--non-numeric">Client</th>
+      <th class="mdl-data-table__cell--non-numeric" colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @senders.each do |sender| %>
+      <% if sender.admin %>
+      <tr class="admin">
+      <% else %>
       <tr>
+      <% end %>
         <td><%= sender.email %></td>
-        <td><%= sender.password_digest %></td>
-        <td><%= sender.admin %></td>
-        <td><%= sender.client %></td>
+        <td><%= sender.client.name %></td>
         <td><%= link_to 'Show', sender %></td>
         <td><%= link_to 'Edit', edit_sender_path(sender) %></td>
         <td><%= link_to 'Destroy', sender, method: :delete, data: { confirm: 'Are you sure?' } %></td>
