--- a/app/views/senders/index.html.erb
+++ b/app/views/senders/index.html.erb
@@ -17,9 +17,8 @@
     <% @senders.each do |sender| %>
       <tr>
         <td><%= sender.email %></td>
-        <td><%= sender.password_digest %></td>
         <td><%= sender.admin %></td>
-        <td><%= sender.client %></td>
+        <td><%= sender.client.name %></td>
         <td><%= link_to 'Show', sender %></td>
         <td><%= link_to 'Edit', edit_sender_path(sender) %></td>
         <td><%= link_to 'Destroy', sender, method: :delete, data: { confirm: 'Are you sure?' } %></td>
