--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -7,10 +7,9 @@
     <tr>
       <th>Schedule</th>
       <th>Title</th>
-      <th>Body</th>
       <th>Sender</th>
-      <th>Receiver</th>
-      <th>Group</th>
+      <th>Groups</th>
+      <th>Sent?</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,10 +19,9 @@
       <tr>
         <td><%= email.schedule %></td>
         <td><%= email.title %></td>
-        <td><%= email.body %></td>
-        <td><%= email.sender %></td>
-        <td><%= email.receiver %></td>
-        <td><%= email.group %></td>
+        <td><%= email.sender.email %></td>
+        <td><%= email.groups.map { |g| g.name }.join(', ') %></td>
+        <td><%= email.sent? ? 'yes' : 'no' %></td>
         <td><%= link_to 'Show', email %></td>
         <td><%= link_to 'Edit', edit_email_path(email) %></td>
         <td><%= link_to 'Destroy', email, method: :delete, data: { confirm: 'Are you sure?' } %></td>
