Added the group react component to email form

--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -27,14 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :receiver_id %>
-    <%= form.select :receiver_id, options_for_select(Receiver.all.map { |r| [r.name, r.id] }) %>
-
-  </div>
-
-  <div class="field">
-    <%= form.label :group_id %>
-    <%= form.select :group_id, options_for_select(Group.all.map { |g| [g.name, g.id] }) %>
+    <%= form.label :groups %>
+    <%= react_component('EmailRelationSelector', { id: email.id }) %>
   </div>
 
   <div class="actions">
