--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -17,17 +17,17 @@
 
 <p>
   <strong>Sender:</strong>
-  <%= @email.sender %>
+  <%= @email.sender[:email] %>
 </p>
 
 <p>
   <strong>Receiver:</strong>
-  <%= @email.receiver %>
+  <%= @email.receivers.map{|receiver| receiver[:email]} %>
 </p>
 
 <p>
   <strong>Group:</strong>
-  <%= @email.group %>
+  <%= @email.groups.map{|group| group[:name]} %>
 </p>
 
 <%= link_to 'Edit', edit_email_path(@email) %> |
