--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -21,9 +21,7 @@
         <td><%= email.schedule %></td>
         <td><%= email.title %></td>
         <td><%= email.body %></td>
-        <td><%= email.sender %></td>
-        <td><%= email.receiver %></td>
-        <td><%= email.group %></td>
+        <td><%= email.sender.email %></td>
         <td><%= link_to 'Show', email %></td>
         <td><%= link_to 'Edit', edit_email_path(email) %></td>
         <td><%= link_to 'Destroy', email, method: :delete, data: { confirm: 'Are you sure?' } %></td>
