--- a/app/views/senders/index.html.erb
+++ b/app/views/senders/index.html.erb
@@ -20,7 +20,10 @@
         <td><%= sender.client.name %></td>
         <td><%= link_to 'Show', sender %></td>
         <td><%= link_to 'Edit', edit_sender_path(sender) %></td>
-        <td><%= link_to 'Destroy', sender, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= current_user.admin ?
+                  link_to('Destroy', sender, method: :delete, data: { confirm: 'Are you sure?' })
+                  : ''
+                %></td>
       </tr>
     <% end %>
   </tbody>
