--- a/app/views/senders/not_user.html.erb
+++ b/app/views/senders/not_user.html.erb
@@ -1,2 +1,2 @@
-<h1> ACCESS DENIED</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" > ACCESS DENIED</h1>
 <p> users cannot edit other users </p>
