--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -11,12 +11,12 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :client_name %>
+  <div class="field <%= get_style_classes('form-input-div') %>">
+    <%= form.label :name, class: get_style_classes('form-label-text-input') %>
+    <%= form.text_field :name, id: :client_name, class: get_style_classes('form-text-input') %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: get_style_classes('form-submit') %>
   </div>
 <% end %>
