--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Client</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >Editing Client</h1>
 
 <%= render 'form', client: @client %>
 
-<%= link_to 'Show', @client %> |
-<%= link_to 'Back', clients_path %>
+<%= link_to 'Show', @client, class:get_style_classes('btn-show') %> |
+<%= link_to 'Back', clients_path, class:get_style_classes('btn-back') %>
