--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Client</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >New Client</h1>
 
 <%= render 'form', client: @client %>
 
-<%= link_to 'Back', clients_path %>
+<%= link_to 'Back', clients_path, class:get_style_classes('btn-back') %>
