--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -1,6 +1,6 @@
-<p id="notice"><%= notice %></p>
+<%= snackbar_notifications(notice, alert).html_safe %>
 
-<h1>Emails</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >Emails</h1>
 
 <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
   <thead>
@@ -18,9 +18,9 @@
         <td><%= email.schedule %></td>
         <td><%= email.title %></td>
         <td><%= email.sender.name %></td>
-        <td><%= link_to 'Show', email %></td>
-        <td><%= link_to 'Edit', edit_email_path(email) %></td>
-        <td><%= link_to 'Destroy', email, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', email, class:get_style_classes('btn-show') %></td>
+        <td><%= link_to 'Edit', edit_email_path(email), class:get_style_classes('btn-edit') %></td>
+        <td><%= link_to 'Destroy', email, method: :delete, data: { confirm: 'Are you sure?' }, class:get_style_classes('btn-destroy') %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Email', new_email_path %>
+<%= link_to 'New Email', new_email_path, class:get_style_classes('btn-new') %>
