--- a/app/views/emails/new.html.erb
+++ b/app/views/emails/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Email</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >New Email</h1>
 
 <%= render 'form', email: @email %>
 
-<%= link_to 'Back', emails_path %>
+<%= link_to 'Back', emails_path, class:get_style_classes('btn-back') %>
