--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<%= snackbar_notifications(notice, alert).html_safe %>
 
 <p>
   <strong>Schedule:</strong>
@@ -20,5 +20,5 @@
   <%= @email.sender %>
 </p>
 
-<%= link_to 'Edit', edit_email_path(@email) %> |
-<%= link_to 'Back', emails_path %>
+<%= link_to 'Edit', edit_email_path(@email), class:get_style_classes('btn-edit') %> |
+<%= link_to 'Back', emails_path, class:get_style_classes('btn-back') %>
