--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Group</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >New Group</h1>
 
 <%= render 'form', group: @group %>
 
-<%= link_to 'Back', groups_path %>
+<%= link_to 'Back', groups_path, class: get_style_classes('btn-back') %>
