--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<%= snackbar_notifications(notice, alert).html_safe %>
 
 <p>
   <strong>Name:</strong>
@@ -15,5 +15,5 @@
   <%= @group.sender.email %>
 </p>
 
-<%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
+<%= link_to 'Edit', edit_group_path(@group), class: get_style_classes('btn-edit') %> |
+<%= link_to 'Back', groups_path, class: get_style_classes('btn-back') %>
