--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>MewKeting</h1>
+  <h1 class="<%= get_style_classes('h1-title')%>" >MewKeting</h1>
   <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <tr>
       <td style="vertical-align: baseline;">
