--- a/app/views/receivers/edit.html.erb
+++ b/app/views/receivers/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Receiver</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >Editing Receiver</h1>
 
 <%= render 'form', receiver: @receiver %>
 
-<%= link_to 'Show', @receiver %> |
-<%= link_to 'Back', receivers_path %>
+<%= link_to 'Show', @receiver, class:get_style_classes('btn-show') %> |
+<%= link_to 'Back', receivers_path, class: get_style_classes('btn-back') %>
