--- a/app/views/receivers/new.html.erb
+++ b/app/views/receivers/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Receiver</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >New Receiver</h1>
 
 <%= render 'form', receiver: @receiver %>
 
-<%= link_to 'Back', receivers_path %>
+<%= link_to 'Back', receivers_path, class: get_style_classes('btn-back') %>
