--- a/app/views/senders/index.html.erb
+++ b/app/views/senders/index.html.erb
@@ -1,6 +1,6 @@
-<p id="notice"><%= notice %></p>
+<%= snackbar_notifications(notice, alert).html_safe %>
 
-<h1>Senders</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >Senders</h1>
 
 <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
   <thead>
@@ -20,9 +20,9 @@
       <% end %>
         <td><%= sender.email %></td>
         <td><%= sender.client.name %></td>
-        <td><%= link_to 'Show', sender %></td>
-        <td><%= link_to 'Edit', edit_sender_path(sender) %></td>
-        <td><%= link_to 'Destroy', sender, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', sender, class:get_style_classes('btn-show') %></td>
+        <td><%= link_to 'Edit', edit_sender_path(sender), class: get_style_classes('btn-edit') %></td>
+        <td><%= link_to 'Destroy', sender, method: :delete, data: { confirm: 'Are you sure?' }, class: get_style_classes('btn-destroy') %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Sender', new_sender_path %>
+<%= link_to 'New Sender', new_sender_path, class: get_style_classes('btn-new') %>
