--- a/app/views/senders/new.html.erb
+++ b/app/views/senders/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Sender</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >New Sender</h1>
 
 <%= render 'form', sender: @sender %>
 
-<%= link_to 'Back', senders_path %>
+<%= link_to 'Back', senders_path, class: get_style_classes('btn-back') %>
