--- a/app/views/senders/show.html.erb
+++ b/app/views/senders/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<%= snackbar_notifications(notice, alert).html_safe %>
 
 <p>
   <strong>Email:</strong>
@@ -20,5 +20,5 @@
   <%= @sender.client %>
 </p>
 
-<%= link_to 'Edit', edit_sender_path(@sender) %> |
-<%= link_to 'Back', senders_path %>
+<%= link_to 'Edit', edit_sender_path(@sender), class: get_style_classes('btn-edit') %> |
+<%= link_to 'Back', senders_path, class: get_style_classes('btn-back') %>
