--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :template_title %>
+  <div class="field <%= get_style_classes('form-input-div') %>">
+    <%= form.label :title, class: get_style_classes('form-label-text-input') %>
+    <%= form.text_field :title, id: :template_title, class: get_style_classes('form-text-input') %>
   </div>
 
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_field :body, id: :template_body %>
+  <div class="field <%= get_style_classes('form-input-div') %>">
+    <%= form.label :body, class: get_style_classes('form-label-text-input') %>
+    <%= form.text_field :body, id: :template_body, class: get_style_classes('form-text-input') %>
   </div>
   
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: get_style_classes('form-submit') %>
   </div>
 <% end %>
