--- a/app/views/templates/edit.html.erb
+++ b/app/views/templates/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Template</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >Editing Template</h1>
 
 <%= render 'form', template: @template %>
 
-<%= link_to 'Show', @template %> |
-<%= link_to 'Back', templates_path %>
+<%= link_to 'Show', @template, class:get_style_classes('btn-show') %> |
+<%= link_to 'Back', templates_path, class: get_style_classes('btn-back') %>
