--- a/app/views/templates/new.html.erb
+++ b/app/views/templates/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Template</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >New Template</h1>
 
 <%= render 'form', template: @template %>
 
-<%= link_to 'Back', templates_path %>
+<%= link_to 'Back', templates_path, class: get_style_classes('btn-back') %>
