--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<%= snackbar_notifications(notice, alert).html_safe %>
 
 <p>
   <strong>Title:</strong>
@@ -15,5 +15,5 @@
   <%= @template.sender.email %>
 </p>
 
-<%= link_to 'Edit', edit_template_path(@template) %> |
-<%= link_to 'Back', templates_path %>
+<%= link_to 'Edit', edit_template_path(@template), class: get_style_classes('btn-edit') %> |
+<%= link_to 'Back', templates_path, class: get_style_classes('btn-back') %>
