Auto stash before merge of "CssAndSmallFixes" and "master"

--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -38,6 +38,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit 'Enviar email' %>
+    <%= form.submit 'Enviar email', class: get_style_classes('form-submit') %>
   </div>
 <% end %>
