--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 class="<%= get_style_classes('h1-title')%>" >MewKeting</h1>
-  <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+  <table>
     <tr>
       <td style="vertical-align: baseline;">
         <p>
