--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -22,12 +22,16 @@
 
 <p>
   <strong>Receiver:</strong>
-  <%= @email.receivers.map { |receiver| receiver.email } %>
+  <ol>
+    <%= @email.receivers.map { |receiver| "<li>#{ link_to receiver.email, receiver }</li>" }.join.html_safe %>
+  </ol>
 </p>
 
 <p>
   <strong>Group:</strong>
-  <%= @email.groups.map { |group| group.name } %>
+  <ol>
+    <%= @email.groups.map { |group| "<li>#{ link_to group.name, group }</li>" }.join.html_safe %>
+  </ol>
 </p>
 
 <%= link_to 'Edit', edit_email_path(@email) %> |
