Create group email relation (#11)
* Added the group react component to email form

* Added react compopent for groups assignment to email

* Added some changes to seed

* Fixed scheduling track

* Creates links for relations

* Fixes group relation creation

* Removes debug code

* Only shows active groups

--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :groups %>
+    <%= react_component('EmailRelationSelector', { id: email.id }) %>
+  </div>
+
+  <div class="field">
     <%= form.label :body %>
     <% no_vars = email.vars.nil? || email.vars == '{}' %>
     <%= react_component('VarsTable', {
