--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -21,8 +21,17 @@
 </p>
 
 <p>
-  <strong>Groups:</strong>
-  <%= @email.groups.map {|g| g.name }.join(', ') %>
+  <strong>Receiver:</strong>
+  <ol>
+    <%= @email.receivers.map { |receiver| "<li>#{ link_to receiver.email, receiver }</li>" }.join.html_safe %>
+  </ol>
+</p>
+
+<p>
+  <strong>Group:</strong>
+  <ol>
+    <%= @email.groups.map { |group| "<li>#{ link_to group.name, group }</li>" }.join.html_safe %>
+  </ol>
 </p>
 
 <%= link_to 'Edit', edit_email_path(@email) %> |
