--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -31,6 +31,8 @@
       <a class="mdl-navigation__link" href="/emails">Emails</a>
       <% if current_user %>
       <a class="mdl-navigation__link" href="/logout">Logout</a>
+      <% else %>
+      <a class="mdl-navigation__link" href="/login">Login</a>
       <% end %>
 
     </nav>
