--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -19,8 +19,13 @@
 
   <div class="field">
     <p>To use a variable in your message, put it between "{{}}". E.g. {{var}}</p>
-    <%= form.label :body %>
-    <%= form.text_area :body, id: :template_body %>
+    <%= react_component('VarsTable', {
+          text: template.body.nil? ? '' : template.body,
+          values: [],
+          useVars: true,
+          entity: 'template'
+      })
+    %>
   </div>
   
   <div class="actions">
