--- a/app/views/senders/_form.html.erb
+++ b/app/views/senders/_form.html.erb
@@ -15,16 +15,19 @@
     <%= form.label :email, class: get_style_classes('form-label-text-input') %>
     <%= form.text_field :email, id: :sender_email, class: get_style_classes('form-text-input') %>
   </div>
+  <br />
 
   <div class="field <%= get_style_classes('form-input-div') %>">
     <%= form.label :password, class: get_style_classes('form-label-text-input') %>
-    <%= form.password_field :password, id: :sender_password %>
+    <%= form.password_field :password, id: :sender_password, class: get_style_classes('form-text-input') %>
   </div>
+  <br />
 
   <div class="field <%= get_style_classes('form-input-div') %>">
     <%= form.label :confirm_password, class: get_style_classes('form-label-text-input') %>
-    <%= form.password_field :confirm_password, id: :confirm_password %>
+    <%= form.password_field :confirm_password, id: :confirm_password, class: get_style_classes('form-text-input') %>
   </div>
+  <br />
 
   <div class="actions">
     <%= form.submit class: get_style_classes('form-submit') %>
