--- a/app/assets/stylesheets/emails.scss
+++ b/app/assets/stylesheets/emails.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the Emails controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+div.year {
+  width: 80px;
+}
+
+div.month {
+  width: 130px;
+}
+div.day {
+  width: 50px;
+}
+div.hour {
+  width: 50px;
+}
+div.minute {
+  width: 50px;
+}
+div.second {
+  width: 50px;
+}
