Fixes UI for templates form

--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -22,7 +22,7 @@
     <%= react_component('VarsTable', {
           text: template.body.nil? ? '' : template.body,
           values: [],
-          useVars: true,
+          useVars: false,
           entity: 'template'
       })
     %>
